# python_curses_syntax_highlighting

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
curses_syntax_highlighting/: __init__.py  display.py  highlighter.py  themes.py  viewer.py
examples/: 1. Minimal.py  2. Code Block Background Colour.py  3. Scrolling Example.py  4. Windowed Scrolling Example.py  5. Advanced Example.py  6. Split Preview Example.py  7. String Input Example.py  test_file_for_features.py
